--- a/conclusion.html
+++ b/conclusion.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class='footer'>
-      <br>This website was created by Karsjen Koop and Jonas Scholz. We are proud to present a website that only contains features (and no bugs).
+      <br>This website was created by Karsjen Koop and Jonas Scholz. We are proud to present a website that only contains features (and no bugs). XML_ERROR_JUNK_AFTER_DOC
 </div>
   </body>
 </html>
