--- a/epsilon.html
+++ b/epsilon.html
@@ -101,7 +101,7 @@
         </p>
     </div>
     <div class='footer'>
-      <br>This website was created by Karsjen Koop and Jonas Scholz. We are proud to present a website that only contains features (and no bugs).
+      <br>This website was created by Karsjen Koop and Jonas Scholz. We are proud to present a website that only contains features (and no bugs). XML_ERROR_JUNK_AFTER_DOC
     </div>  
   </body>
 </html>
